@@ -20,8 +20,8 @@ Feature: Cucumber command line
             ./features/step_definitions/sample_steps.rb:63:in `/^failing expectation$/'
             features/failing_expectation.feature:4:in `Given failing expectation'
 
-      1 scenario
-      1 failed step
+      1 scenario (1 failed)
+      1 step (1 failed)
 
       """
 
@@ -38,8 +38,8 @@ Feature: Cucumber command line
             ./features/step_definitions/sample_steps.rb:63:in `/^failing expectation$/'
             features/failing_expectation.feature:4:in `Given failing expectation'
 
-      1 scenario
-      1 failed step
+      1 scenario (1 failed)
+      1 step (1 failed)
 
       """
 
